<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MainFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/background_button_back"
        android:scaleType="centerInside"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_management" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/payment"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_card_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="46dp"
        android:text="@string/card_management"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="30dp"
        android:text="@string/add_new"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_check_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="16dp"
        android:text="@string/or_check_out_with"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        app:layout_goneMarginTop="57dp" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_paypal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_payment_paypal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_paypal"
        app:layout_constraintEnd_toStartOf="@+id/iv_visa_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_check_out" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_visa_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_payment_visa"
        android:paddingStart="5dp"
        android:paddingTop="8dp"
        android:paddingEnd="5dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_visa"
        app:layout_constraintEnd_toStartOf="@+id/iv_mastercard"
        app:layout_constraintStart_toEndOf="@+id/iv_paypal"
        app:layout_constraintTop_toBottomOf="@+id/tv_check_out" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_mastercard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_payment_mastercard"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:paddingEnd="15dp"
        android:paddingBottom="8dp"
        android:src="@drawable/ic_mastercard"
        app:layout_constraintEnd_toStartOf="@+id/iv_alipay"
        app:layout_constraintStart_toEndOf="@+id/iv_visa_card"
        app:layout_constraintTop_toBottomOf="@+id/tv_check_out" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_alipay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_payment_alipay"
        android:paddingStart="5dp"
        android:paddingTop="15dp"
        android:paddingEnd="5dp"
        android:paddingBottom="15dp"
        android:src="@drawable/ic_alipay"
        app:layout_constraintEnd_toStartOf="@+id/iv_amex"
        app:layout_constraintStart_toEndOf="@+id/iv_mastercard"
        app:layout_constraintTop_toBottomOf="@+id/tv_check_out" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_amex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/background_payment_amex"
        android:paddingStart="5dp"
        android:paddingTop="15dp"
        android:paddingEnd="5dp"
        android:paddingBottom="15dp"
        android:src="@drawable/ic_amex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_alipay"
        app:layout_constraintTop_toBottomOf="@+id/tv_check_out" />


</androidx.constraintlayout.widget.ConstraintLayout>